[package]
name = "egui_web_component"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CustomElementRegistry",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "CssStyleDeclaration"
] }
egui = "0.35"
eframe = { version = "0.35", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
log = "0.4.29"
