[package]
name = "second_component"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "HtmlInputElement",
    "CustomElementRegistry",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "CssStyleDeclaration"
] }
console_error_panic_hook = "0.1"
rust_web_component = { path = "../../rust_web_component" }
rust_web_component_macro = { path = "../../rust_web_component_macro" }
